@@ -475,4 +475,5 @@
   - feature: 00_CUL: Answer CUR requests (status/time/fht)
   - bugfix:  support for second correction factor for EMWZ in 15_CUL_EM added
   - feature: CUL further sets/gets added
+  - feature: Removed msghist for multiple FHZ handling, IODev attribute added
   - bugfix:  cut off string "(counter)" from fallback value in 13_KS300.pm
